[gd_scene load_steps=3 format=3 uid="uid://rc6mwphwcjrk"]

[ext_resource type="Script" uid="uid://cp15c8267xy3l" path="res://scripts/ui/ExtinctionPanel.gd" id="1_kc2ut"]
[ext_resource type="Theme" uid="uid://djqfj60k8kq6r" path="res://resources/TriassicTheme.tres" id="1_m0lol"]

[node name="ExtinctionPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_m0lol")
script = ExtResource("1_kc2ut")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -63.5
offset_right = 195.0
offset_bottom = -18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "MASS EXTINCTION EVENT"

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.5
offset_top = -21.5
offset_right = 232.5
offset_bottom = 1.5
grow_horizontal = 2
grow_vertical = 2
text = "Your ecosystem has reached its peak. The meteor is coming."

[node name="ResetBtn" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.5
offset_top = 14.5
offset_right = 140.5
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
text = "Evolve & Restart (+10% DNA Bonus)"

[node name="RewardLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.6, 1, 0.6, 1)
text = "Fossil Reward: +5"
horizontal_alignment = 1
